--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,112 +1,109 @@
+/*Styles for h1 elements*/
 h1 {
-    text-align: center;
     margin-top: 5px;
-    margin-bottom: 45px;
+    text-align: center;
     font-size: 2em;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    margin-bottom: 45px;
     font-weight: bold;
-
 }
 /* Styles for h2 */
 h2 {
-    margin-left: 20px;
     padding-top: 10px;
     margin-bottom: 10px;
-    font-size: 1.5em;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-weight: bold;
+    margin-left: 20px;
+    font-size: 1.5em;
 }
+/*Default styles for body*/
 body{
     background-color: gainsboro;
     margin: 0 auto;
     font-family: 'Monospace','Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #696969;
+    color: gray;
 }
+/*Styles for page section*/
 .page{
-    background-color: ghostwhite;
     margin-left: 15%;
-    padding-bottom: 50px;
-    padding-top: 30px;
     margin-top: 30px;
     width: 980px;
+    padding-top: 35px;
+    padding-bottom: 50px;
+    background-color: ghostwhite;
 }
+/*Styles for box div*/
 .box{
+    background-color: whitesmoke;
+    box-shadow: 5px 10px 18px gray;
     margin-left: 10%;
     margin-right: 10%;
-    background-color: #FFFFFF;
-    box-shadow: 5px 10px 18px #888888;
 }
-.btn{
-    margin-top: 25px;
-    
-}
+/*Styles for textarea where password is held*/
 textarea {
     padding: 10%;
-    border: dashed 1px gray;
     margin-left: 10%;
     padding-left: 15%;
     padding-right: 15%;
-    width: 50%;
     font-family: "Lucida Console", Monaco, monospace;
-    text-align: center;
-    color: #696969;
+    border: dashed 1px gray;
+    color: gray;
     font-size: 18px;
+    text-align: center;
+    width: 50%;
 }
+/*Makes password button class*/
 .makePW {
     background-color: tomato;
-    font-size: 20px;
     padding: 14px 40px;
-    border-radius: 20px;
-    justify-self: center;
     margin-left: 33%;
+    margin-top: 25px;
+    border-radius: 20px;
+    font-size: 20px;
 }
-
+/*@Meida functions for screen size changes*/
 @media screen and (max-width: 980px) {
     /* Resized content to fit 980px  */
     body {
         max-width: 980px;
     }   
-    /* Styles for the wrapper div */
+    /* Styles for the page section */
     .page {
         width: 100%;
         }
 }
     /* A Media Query max-width: 786px */
-    @media screen and (max-width: 786px) {
+@media screen and (max-width: 786px) {
     /* Resized content to fit 786px  */
     body {
         max-width: 786px;
     } 
-    /* Styles for the wrapper div */
+    /* Styles for the page section */
     .page {
         width: 100%;
         }
-/* Styles for generate button */
-.makePW {
+/* Styles for makePW button */
+    .makePW {
     
     margin-left: 10%;
     margin-bottom: 10px;
-}
-/* Styles for copy button */
-
     }
+
+}
     /* A Media Query max-width: 640px */
-    @media screen and (max-width: 640px) {
+@media screen and (max-width: 640px) {
      /* Resized content to fit 640px  */
-     body {
+    body {
         max-width: 640px;
     } 
     
-     .page {
+    .page {
         width: 100%;
-        }
-        .btn {
-            margin-top: 20px;
-        }
-        /* Styles for generate button */
-        .makePW {
+    }
+        /* Styles for makePW button */
+    .makePW {
             margin-left: 22%;
             
         }
         
-    }
+}
