--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,19 @@ textarea {
     border-radius: 20px;
     font-size: 20px;
 }
+/* .changeTheme{
+    background-color: lightskyblue;
+    padding: 14px 40px;
+    margin-left: 33%;
+    margin-top: 25px;
+    border-radius: 20px;
+    font-size: 20px;
+
+}
+.buttons{
+    display: flex;
+    justify-content: space-evenly;
+} */
 /*@Meida functions for screen size changes*/
 @media screen and (max-width: 980px) {
     /* Resized content to fit 980px  */
